# HONEST-RL-Calibrator

./: .gitignore  Dockerfile  Makefile  README.md  RUNBOOK.md  calibration_profiles.py  openenv.yaml  pyproject.toml  requirements.txt  run_server.sh
data/: README.md  __init__.py  schema.py
data/ingestion/: __init__.py  ingest_apps.py  ingest_hendrycks_math.py  ingest_mbpp.py  regenerate_zebralogic.py
data/sampler/: __init__.py  unified_sampler.py
data/tests/: test_code_verifier.py  test_difficulty_controller.py  test_math_verifier.py  test_schema.py
data/verifiers/: __init__.py  code_verifier.py  logic_verifier.py  math_verifier.py
docs/: WRITEUP.md
eval/: baseline_eval.py  full_eval.py
eval/ood/: fetch_ood_data.py
mcp_server/: README.md  __init__.py  __main__.py  honest_mcp.py  pyproject.toml
models/: models.py
scripts/: verify_controller.py
server/: app.py  difficulty.py  environment.py  reward.py  verifier.py
server/generators/: math_gen.py
tests/: test_client_server.py  test_difficulty.py  test_environment.py  test_math_gen.py  test_mcp_server.py  test_reward.py
training/: format_sft.py  train_colab.ipynb  train_grpo.py
