[project]
name = "honest-mcp"
version = "0.1.0"
description = "MCP server exposing the HONEST calibrated reasoning model as a tool."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "HONEST authors" }
]

dependencies = [
  "mcp>=1.0",
  "transformers>=4.45",
  "accelerate>=0.33",
  "peft>=0.12",
  "torch>=2.1",
]

[project.scripts]
honest-mcp = "honest_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
